# Y-DiMuonResonances

./: #main.C#  .clang-format  .gitignore  CMakeLists.txt  Cuts.h  README.md  SpettrumPlot.C  SpettrumPlot.C~  SpettrumPlot.h  SpettrumPlot.h~  Style_BELLE2.C  ToDo.md  YCross.sh  YFit.sh  df_set.h  dimuonSpectrum.C  dimuonSpectrum.C~  fitlp2.C  fitlp2.h  fitp1.h  index.md  main.C~  main.c  prova.C
.ipynb_checkpoints/: dimuonSpectrum-checkpoint.ipynb
Report/: biblio.bib  main.tex
YCrossFit/: CMakeLists.txt
YCrossFit/include/: Cuts.h  SpectrumPlot.h  df_set.h  diffCrossSection.h  fitRoo.h  optionParse.h
YCrossFit/src/: Cuts.C  SpectrumPlot.C  df_set.C  diffCrossSection.C  fitRoo.C  optionParse.C
YFit/: CMakeLists.txt
doc/: ConfigFile
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  _spectrum_plot_8h_source.html  annotated.html  conf.py  diff_crossection_8_c.html  dir_13a6baedfa387399723bfc39e0bc3cc4.html  dir_5c982d53a68cdbcd421152b4020263a9.html  fit_roo_8h_source.html  functions.html  functions_vars.html  globals.html  index.rst  mainpage.C  mainpage.dox
docs/@DOXYGEN_OUTPUT_DIR@/latex/: refman.tex
docs/@DOXYGEN_OUTPUT_DIR@/xml/: Doxyfile.xml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/api/: YFit.doctree  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/api/: YFit.rst.txt
docs/_build/html/api/: YFit.html  index.html
docs/_build/xml/: Doxyfile.xml  _cuts_8_c.xml  _cuts_8h.xml  _spectrum_plot_8_c.xml  _spectrum_plot_8h.xml  df__set_8_c.xml  df__set_8h.xml  fit_roo_8_c.xml  fit_roo_8h.xml  index.xml  main_8_c.xml  namespace_r_o_o_t_1_1_vec_ops.xml  option_parse_8h.xml
docs/api/: index.rst
docs/doxygen/: mainpage.dox
docs/doxygen/html/: _cuts_8_c.html  _cuts_8_c.js  _cuts_8h.html  _cuts_8h.js  _cuts_8h_source.html  _spectrum_plot_8_c.html  _spectrum_plot_8_c.js  _spectrum_plot_8h.html  _spectrum_plot_8h.js  _spectrum_plot_8h_source.html  classes.html  df__set_8_c.html  df__set_8_c.js  df__set_8h.html  df__set_8h.js  df__set_8h_source.html  diff_crossection_8_c.html  diff_crossection_8h.html  diff_crossection_8h_source.html  dir_13a6baedfa387399723bfc39e0bc3cc4.html  dir_13a6baedfa387399723bfc39e0bc3cc4.js  dir_33bf31e38b0246880c826fe6c405ac4f.html  dir_33bf31e38b0246880c826fe6c405ac4f.js  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4b74e50f3f245eed235ef62576b8bfa5.html  dir_4b74e50f3f245eed235ef62576b8bfa5.js  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  files.html  files_dup.js  fit_roo_8_c.html  fit_roo_8_c.js  fit_roo_8h.html  fit_roo_8h.js  fit_roo_8h_source.html  fitp1_8h.html  globals.html  globals_func.html  index.html  (+13 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  files_0.js  files_1.js  files_3.js  files_5.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_8.js  pages_0.js  searchdata.js  variables_0.js  variables_5.js
docs/doxygen/latex/: _cuts_8_c.tex  _cuts_8h.tex  _cuts_8h_source.tex  _spectrum_plot_8_c.tex  _spectrum_plot_8h.tex  _spectrum_plot_8h_source.tex  df__set_8_c.tex  df__set_8h.tex  df__set_8h_source.tex  dir_13a6baedfa387399723bfc39e0bc3cc4.tex  dir_33bf31e38b0246880c826fe6c405ac4f.tex  dir_4b74e50f3f245eed235ef62576b8bfa5.tex  dir_5c982d53a68cdbcd421152b4020263a9.tex  files.tex  fit_roo_8_c.tex  fit_roo_8h.tex  fit_roo_8h_source.tex  fitp1_8h.tex  fitp1_8h_source.tex  main_8_c.tex  option_parse_8_c.tex  option_parse_8h.tex  option_parse_8h_source.tex  refman.tex
docs/doxygen/xml/: Doxyfile.xml  _cuts_8_c.xml  _cuts_8h.xml  _spectrum_plot_8_c.xml  _spectrum_plot_8h.xml  df__set_8_c.xml  df__set_8h.xml  diff_crossection_8_c.xml  diff_crossection_8h.xml  dir_13a6baedfa387399723bfc39e0bc3cc4.xml  dir_33bf31e38b0246880c826fe6c405ac4f.xml  dir_4b74e50f3f245eed235ef62576b8bfa5.xml  dir_5c982d53a68cdbcd421152b4020263a9.xml  fit_roo_8_c.xml  fit_roo_8h.xml  fitp1_8h.xml  index.xml  main_8_c.xml  namespace_r_o_o_t_1_1_vec_ops.xml  namespace_roo_fit.xml  option_parse_8_c.xml  option_parse_8h.xml  structdcs_vec.xml
docs/html/: _cuts_8h_source.html  dir_33bf31e38b0246880c826fe6c405ac4f.html  fit_roo_8_c.html  fit_roo_8h.html  fitp1_8h_source.html  globals_func.html  globals_vars.html  main_8_c.html  option_parse_8_c.html  test.txt
docs/html/search/: all_1.js  all_3.js  all_5.js  all_8.js  all_d.js  files_3.js  files_4.js  functions_0.js  functions_6.js  functions_7.js  functions_a.js  variables_3.js  variables_4.js  variables_6.js
docs/search/: all_b.js  all_c.js  classes_0.js  files_2.js  functions_2.js  searchdata.js  variables_2.js
html/: Cuts_8C.html  Cuts_8C.js  Cuts_8h.html  Cuts_8h.js  Cuts_8h_source.html  README_8md.html  SpectrumPlot_8C.html  SpectrumPlot_8C.js  SpectrumPlot_8h.html  SpectrumPlot_8h.js  SpectrumPlot_8h_source.html  annotated.html  annotated_dup.js  classes.html  df__set_8C.html  df__set_8C.js  df__set_8h.html  df__set_8h.js  df__set_8h_source.html  diffCrossSection_8C.html  diffCrossSection_8C.js  diffCrossSection_8h.html  diffCrossSection_8h.js  diffCrossSection_8h_source.html  diffCrossection_8C.html  diffCrossection_8C.js  diffCrossection_8h.html  diffCrossection_8h.js  diffCrossection_8h_source.html  dir_13a6baedfa387399723bfc39e0bc3cc4.html  dir_13a6baedfa387399723bfc39e0bc3cc4.js  dir_33bf31e38b0246880c826fe6c405ac4f.html  dir_33bf31e38b0246880c826fe6c405ac4f.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4b74e50f3f245eed235ef62576b8bfa5.html  dir_4b74e50f3f245eed235ef62576b8bfa5.js  dir_5c982d53a68cdbcd421152b4020263a9.html  dir_5c982d53a68cdbcd421152b4020263a9.js  dir_c246f3ac2af61315881d926a79ae05b3.html  dir_c246f3ac2af61315881d926a79ae05b3.js  (+29 more)
include/: Cuts.h  SpectrumPlot.h  SpettrumPlot.h  df_set.h  (+4 more)
test/: CMakeLists.txt  test1.C  testRes.C  test_arg.C  test_df_set.C  test_failing.C  test_fitRoo.C  test_plot.C  test_string.C  tutorial.cpp  tutorial.hpp
(+93 files in other folders)
